# app/static/swagger.json
@@ -49,7 +49,7 @@
     },
     "/aiq/image/upload": {
       "post": {
-        "tags": ["Upload and persist image"],
+        "tags": ["Challange_1 - Upload and persist image"],
         "name": "Upload Image",
         "description": "Uploads an image to the server.",
         "requestBody": {
@@ -82,7 +82,7 @@
       "get": {
         "description": "Get list of all circular objects for the given imageId",
         "tags": [
-          "List all circular objects for the given imageId"
+          "Challange_1 - List all circular objects for the given imageId"
         ],
         "security": {
           "basicAuth": []
@@ -142,9 +142,9 @@
       },
       "/aiq/circles/{circleId}": {
         "get": {
-          "description": "Get details of a circular for the given circleId",
+          "description": " Get details of a circular for the given circleId",
           "tags": [
-            "Get all details of the given circleId"
+            "Challange_1 - Get all details of the given circleId"
           ],
           "security": {
             "basicAuth": []
@@ -190,9 +190,55 @@
               }
             }
           }
+        },
+        "/aiq/image/resize": {
+          "post": {
+            "description": "This will take image from the Challange_2.csv file and resize and save image to DB",
+            "tags": [
+              "Challange_2 - Read image from CSV, resize and save"
+            ],
+            "security": {
+              "basicAuth": []
+            },
+            "responses": {
+              "200": {
+                "description": "Successsfully resized and saved the image"
+              }
+            }
+          }
+        },
+        "/aiq/image/fetch_frames?min_depth={min_depth}&max_depth={max_depth}": {
+          "get": {
+            "description": "Enter min_depth and max_depth to filter pixels from the image",
+            "tags": [
+              "Challange_2 - Filter pixels using min and max depth"
+            ],
+            "security": {
+              "basicAuth": []
+            },
+            "parameters": [
+              {
+                "name": "min_depth",
+                "in": "query",
+                "required": true,
+                "description": "minimum depth of the image",
+                "type": "string"
+              },
+              {
+                "name": "max_depth",
+                "in": "query",
+                "required": true,
+                "description": "maximum depth of the image",
+                "type": "string"
+              }
+            ],
+            "responses": {
+              "200": {
+                "description": "Successsfully fetched pixed for given min and max depth"
+
+              }
+            }
+          }
         }
-
-
     }
-
   }
